[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.5
margin_top = -73.5
margin_right = 100.5
margin_bottom = 73.5
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 201.0
margin_bottom = 14.0
text = "Nagzz Comunity Game"
align = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 201.0
margin_bottom = 38.0
text = "New game"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 201.0
margin_bottom = 62.0
text = "Setings"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 201.0
margin_bottom = 86.0
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 201.0
margin_bottom = 110.0
text = "Quit"

[node name="TestScene" type="Button" parent="."]
margin_left = 55.0
margin_top = 463.0
margin_right = 173.0
margin_bottom = 500.0
text = "Test scene"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="TestScene" to="." method="_on_TestScene_pressed"]
